# google-home-test

./: Cargo.toml  Dockerfile  docker-compose.yml  exittest.http
.github/workflows/: prod.yml
src/: exittest.http  main.rs
src/server/: mod.rs
src/server/endpoints/: home_assistant.rs  mod.rs
src/tests/: mod.rs
