cargo-features = ["edition2021"]

[package]
name = "GHBackend"
version = "0.1.0"
edition = "2021"

[default]
port = 3000
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
homeassistant = "0.3.0"
lazy_static = "1.4.0"
tower = { version = "0.4.13", features = ["util"] }
hyper = "1.1.0"
reqwest = "0.11"
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.108"
